[gd_scene load_steps=4 format=3 uid="uid://b3r3ql4q6pk1v"]

[ext_resource type="Script" path="res://src/game.gd" id="1_abc12"]
[ext_resource type="PackedScene" uid="uid://hud123456789" path="res://scenes/hud.tscn" id="2_hud"]
[ext_resource type="PackedScene" uid="uid://pause123456" path="res://scenes/pause_menu.tscn" id="3_pause"]

[node name="Game" type="Node2D"]
script = ExtResource("1_abc12")

[node name="Background" type="ColorRect" parent="."]
offset_right = 640.0
offset_bottom = 640.0
color = Color(0.1, 0.1, 0.1, 1)

[node name="Walls" type="Node2D" parent="."]
position = Vector2(32, 32)

[node name="PlayerSpawn" type="Marker2D" parent="."]
position = Vector2(160, 576)

[node name="EnemySpawns" type="Node2D" parent="."]

[node name="Spawn1" type="Marker2D" parent="EnemySpawns"]
position = Vector2(96, 64)

[node name="Spawn2" type="Marker2D" parent="EnemySpawns"]
position = Vector2(320, 64)

[node name="Spawn3" type="Marker2D" parent="EnemySpawns"]
position = Vector2(544, 64)

[node name="BasePosition" type="Marker2D" parent="."]
position = Vector2(320, 576)

[node name="Bullets" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(320, 320)
zoom = Vector2(0.8, 0.8)

[node name="HUD" parent="." instance=ExtResource("2_hud")]

[node name="PauseMenu" parent="." instance=ExtResource("3_pause")]
